format basic elements of AtaGlance.html section

--- a/app/htmlcomponents/Home-AtaGlance.html
+++ b/app/htmlcomponents/Home-AtaGlance.html
@@ -1,1 +1,37 @@
 <!-- AT A GLANCE section -->
+
+<section id="at-a-glance">
+  <div class="container-fluid">
+    <div class="col-xs-12">
+      <h5>MSU DENVER AT A GLANCE</h5>
+      <h6>Diverse. Transformative. Game-changing.</h6>
+    </div>
+    <div class="container-fluid">
+      <div class="col-xs-6">
+        <img class="img-responsive" src="http://placehold.it/1000X800">
+      </div>
+      <div class="col-xs-6">
+        <h6>Colorado graduates choose MSU Denver</h6>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="col-xs-6">
+        <img class="img-responsive" src="http://placehold.it/1000X800">
+      </div>
+      <div class="col-xs-6">
+        <h6>First generation college students</h6>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="col-xs-6">
+        <img class="img-responsive" src="http://placehold.it/1000X800">
+      </div>
+      <div class="col-xs-6">
+        <h6>Bachelor degree choices</h6>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- AT A GLANCE section ends here-->
