format basic elements of Events.html section

--- a/app/htmlcomponents/Home-Events.html
+++ b/app/htmlcomponents/Home-Events.html
@@ -1,1 +1,22 @@
 <!-- EVENTS section -->
+<section id="events">
+  <div class="container-fluid">
+    <div class="col-xs-12">
+      <h5>WHAT'S HAPPENING RIGHT NOW AT MSU DENVER</h5>
+    </div>
+    <div class="col-xs-12">
+      <img class="img-responsive" src="http://placehold.it/800x500">
+    </div>
+    <div class="col-xs-12">
+      <img class="img-responsive" src="http://placehold.it/800x500">
+    </div>
+    <div class="col-xs-12">
+      <img class="img-responsive" src="http://placehold.it/800x500">
+    </div>
+    <div class="col-xs-12">
+      <button class="btn" type="button"><h6>SEE ALL UPCOMING EVENTS</h6></button>
+    </div>
+  </div>
+</section>
+
+<!-- EVENTS section ends here -->
