format basic elements of Quotes.html section

--- a/app/htmlcomponents/Home-Quote.html
+++ b/app/htmlcomponents/Home-Quote.html
@@ -1,1 +1,14 @@
 <!-- QUOTES section -->
+
+<section id="quote">
+  <div class="container-fluid">
+    <div class="col-xs-12">
+        <h6>Located in the heart of the city, MSU Denver offers an urban experience that is vibrant, diverse, exciting, and unique.</h6>
+    </div>
+    <div class="col-xs-3">
+      <button class="btn" type="button">READ MORE</button>
+    </div>
+  </div>
+</section>
+
+<!-- QUOTES section ends here-->
