--- a/app/htmlcomponents/Home-Stories.html
+++ b/app/htmlcomponents/Home-Stories.html
@@ -6,15 +6,17 @@
       <h6>For more than 50 years, MSU Denver has transformed lives. Our students, educators, and alumni are making a difference in our community and across the globe.</h6>
     </div>
     <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/400x300">
+      <img class="img-responsive" src="http://placehold.it/800x500">
     </div>
     <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/400x300">
+      <img class="img-responsive" src="http://placehold.it/800x500">
     </div>
     <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/400x300">
+      <img class="img-responsive" src="http://placehold.it/800x500">
     </div>
-    <button class="btn" type="button"><h6>READ MORE ROADRUNNER STORIES</h6></button>
+    <div class="col-xs-12">
+      <button class="btn" type="button"><h6>READ MORE ROADRUNNER STORIES</h6></button>
+    </div>
   </div>
 </section>
 <!-- PRESSPAGE Stories ENDS HERE -->
