--- a/app/htmlcomponents/Home-Events.html
+++ b/app/htmlcomponents/Home-Events.html
@@ -4,16 +4,25 @@
     <div class="col-xs-12">
       <h5>WHAT'S HAPPENING RIGHT NOW AT MSU DENVER</h5>
     </div>
-    <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/800x500">
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
     </div>
-    <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/800x500">
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
     </div>
-    <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/800x500">
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
+    </div>
+    <div class="col-xs-12 col-lg-3">
       <button class="btn" type="button"><h6>SEE ALL UPCOMING EVENTS</h6></button>
     </div>
   </div>
