--- a/app/htmlcomponents/Home-Quote.html
+++ b/app/htmlcomponents/Home-Quote.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12">
         <h6>Located in the heart of the city, MSU Denver offers an urban experience that is vibrant, diverse, exciting, and unique.</h6>
     </div>
-    <div class="col-xs-3">
+    <div class="col-xs-3 col-lg-2">
       <button class="btn" type="button">READ MORE</button>
     </div>
   </div>
