--- a/app/htmlcomponents/Home-RunRoad.html
+++ b/app/htmlcomponents/Home-RunRoad.html
@@ -1,10 +1,10 @@
 <!-- RUN YOUR OWN ROAD -->
 <section id="ryor-ad">
   <div class="container-fluid">
-      <div class="col-xs-6">
-        <img class="img-responsive" src="http://placehold.it/800X500">
+      <div class="col-xs-6 col-lg-5">
+        <img class="img-responsive" src="http://placehold.it/2000X1600">
       </div>
-        <div class="col-xs-6">
+        <div class="col-xs-6 col-lg-7">
           <h5>student name goes here</h5>
           <h6>student class affiliation goes here</h6>
           <h6>student description goes here</h6>
