--- a/app/htmlcomponents/Home-Stories.html
+++ b/app/htmlcomponents/Home-Stories.html
@@ -5,16 +5,16 @@
       <h5>TRANSFORMING LIVES. IMPACTING THE WORLD.</h5>
       <h6>For more than 50 years, MSU Denver has transformed lives. Our students, educators, and alumni are making a difference in our community and across the globe.</h6>
     </div>
-    <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/800x500">
+    <div class="col-xs-12 col-lg-7 col-lg-push-5">
+      <img class="img-responsive" src="http://placehold.it/2000x2200">
     </div>
-    <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/800x500">
+    <div class="col-xs-12 col-md-6 col-lg-5 col-lg-pull-7">
+      <img class="img-responsive" src="http://placehold.it/2000x1500">
     </div>
-    <div class="col-xs-12">
-      <img class="img-responsive" src="http://placehold.it/800x500">
+    <div class="col-xs-12 col-md-6 col-lg-5 col-lg-pull-7">
+      <img class="img-responsive" src="http://placehold.it/2000x1500">
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-6">
       <button class="btn" type="button"><h6>READ MORE ROADRUNNER STORIES</h6></button>
     </div>
   </div>
