moves everything to container from container-fluid

--- a/app/htmlcomponents/Home-AtaGlance.html
+++ b/app/htmlcomponents/Home-AtaGlance.html
@@ -1,7 +1,7 @@
 <!-- AT A GLANCE section -->
 
 <section id="at-a-glance">
-  <div class="container-fluid">
+  <div class="container">
     <div class="col-xs-12">
       <h5>MSU DENVER AT A GLANCE</h5>
       <h6>Diverse. Transformative. Game-changing.</h6>
