--- a/app/htmlcomponents/Home-RunRoad.html
+++ b/app/htmlcomponents/Home-RunRoad.html
@@ -1,6 +1,6 @@
 <!-- RUN YOUR OWN ROAD -->
 <section id="ryor-ad">
-  <div class="container-fluid">
+  <div class="container">
       <div class="col-xs-6 col-lg-5">
         <img class="img-responsive" src="http://placehold.it/2000X1600">
       </div>
