--- a/app/htmlcomponents/Home-Stories.html
+++ b/app/htmlcomponents/Home-Stories.html
@@ -1,6 +1,6 @@
 <!-- PRESSPAGE Stories -->
 <section id="stories">
-  <div class="container-fluid">
+  <div class="container">
     <div class="col-xs-12">
       <h5>TRANSFORMING LIVES. IMPACTING THE WORLD.</h5>
       <h6>For more than 50 years, MSU Denver has transformed lives. Our students, educators, and alumni are making a difference in our community and across the globe.</h6>
