--- a/app/htmlcomponents/Home-Events.html
+++ b/app/htmlcomponents/Home-Events.html
@@ -1,6 +1,6 @@
 <!-- EVENTS section -->
 <section id="events">
-  <div class="container-fluid">
+  <div class="container">
     <div class="col-xs-12">
       <h5>WHAT'S HAPPENING RIGHT NOW AT MSU DENVER</h5>
     </div>
