--- a/app/htmlcomponents/Home-Events.html
+++ b/app/htmlcomponents/Home-Events.html
@@ -22,8 +22,10 @@
     <div class="col-xs-12 col-md-6 col-lg-4">
       <img class="img-responsive" src="http://placehold.it/1000x800">
     </div>
-    <div class="col-xs-12 col-lg-3">
+    <div class="col-xs-12">
+      <div class="pull-right">
       <button class="btn" type="button"><h6>SEE ALL UPCOMING EVENTS</h6></button>
+      </div>
     </div>
   </div>
 </section>
