Updates events styles to be bootstrap compliant

--- a/app/htmlcomponents/Home-Events.html
+++ b/app/htmlcomponents/Home-Events.html
@@ -1,27 +1,63 @@
 <!-- EVENTS section -->
-<section id="events">
-  <div class="container">
+<section id="events" class="container">
+  <div class="row">
     <div class="col-xs-12">
-      <h5>WHAT'S HAPPENING RIGHT NOW AT MSU DENVER</h5>
+      <h3>WHAT'S HAPPENING RIGHT NOW AT MSU DENVER</h3>
     </div>
     <div class="col-xs-12 col-md-6 col-lg-4">
+      <div class="panel">
       <img class="img-responsive" src="http://placehold.it/1000x800">
+      <h4>New Student Convocation</h4>
+      <p>August 18th at 5:30 PM</p>
+      <hr>
+      <p>P.E. Events Center</p>
+      </div>
     </div>
     <div class="col-xs-12 col-md-6 col-lg-4">
+      <div class="panel">
       <img class="img-responsive" src="http://placehold.it/1000x800">
+      <h4>New Student Convocation</h4>
+      <p>August 18th at 5:30 PM</p>
+      <hr>
+      <p>P.E. Events Center</p>
     </div>
+  </div>
+    <div class="col-xs-12 col-md-6 col-lg-4 ">
+    <div class="panel">
+      <img class="img-responsive" src="http://placehold.it/1000x800">
+      <h4>New Student Convocation</h4>
+      <p>August 18th at 5:30 PM</p>
+      <hr>
+      <p>P.E. Events Center</p>
+    </div>
+  </div>
     <div class="col-xs-12 col-md-6 col-lg-4">
+      <div class="panel">
       <img class="img-responsive" src="http://placehold.it/1000x800">
+      <h4>New Student Convocation</h4>
+      <p>August 18th at 5:30 PM</p>
+      <hr>
+      <p>P.E. Events Center</p>
     </div>
+  </div>
     <div class="col-xs-12 col-md-6 col-lg-4">
+      <div class="panel">
       <img class="img-responsive" src="http://placehold.it/1000x800">
+      <h4>New Student Convocation</h4>
+      <p>August 18th at 5:30 PM</p>
+      <hr>
+      <p>P.E. Events Center</p>
     </div>
+  </div>
     <div class="col-xs-12 col-md-6 col-lg-4">
+      <div class="panel">
       <img class="img-responsive" src="http://placehold.it/1000x800">
+      <h4>New Student Convocation</h4>
+      <p>August 18th at 5:30 PM</p>
+      <hr>
+      <p>P.E. Events Center</p>
     </div>
-    <div class="col-xs-12 col-md-6 col-lg-4">
-      <img class="img-responsive" src="http://placehold.it/1000x800">
-    </div>
+  </div>
     <div class="col-xs-12">
       <div class="pull-right">
       <button class="btn" type="button"><h6>SEE ALL UPCOMING EVENTS</h6></button>
