updates nav on header

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -105,30 +105,31 @@
       <li id="nav-faculty">
         <a class="mobile-header">About</a>
         <ul class="pushdown-menu">
-          <li><a href="/about">About</a></li>
-          <li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li>
-          <li><a href="/president/">Office of the President</a></li>
-          <li><a href="/trustees/">Board of Trustees</a></li>
-          <li><a href="/giving/">The MSU Denver Foundation</a></li>
-          <li><a href="/50/">Our Past</a></li>
-          <li><a href="/contact/">Questions / Comments</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Strategic Plan 2020</a></li>
+          <li><a href="#">Office of the President</a></li>
+          <li><a href="#">Board of Trustees</a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#">Our Past</a></li>
+          <li><a href="#">Questions / Comments</a></li>
+          <li><a href="#">Graduation / Commencement</a></li>
          </ul>
        </li>
        <li id="nav-admissions">
-         <a class="mobile-header">Admissions</a>
+         <a class="mobile-header">Prospective Students</a>
          <ul class="pushdown-menu">
-           <li><a href="/admissions/">Admissions</a></li>
-           <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
-           <li><a href="/admissions/apply/transfer/">Transfer Students</a></li>
-           <li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li>
-           <li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li>
-           <li><a href="/admissions/apply/internationalstudents/">International Students</a></li>
-           <li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li>
-           <li><a href="/admissions/apply/adultstudents/">Adult Students</a></li>
-           <li><a href="/admissions/apply/re-admit/">Re-Admit</a></li>
-           <li><a href="/admissions/apply/non-degree/">Non-Degree</a></li>
-           <li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li>
-           <li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li>
+           <li><a href="#">Prospective Students</a></li>
+           <li><a href="#">First-Time Undergraduate</a></li>
+           <li><a href="#">Transfer Students</a></li>
+           <li><a href="#">Adult Students</a></li>
+           <li><a href="#">Master&rsquo;s Programs</a></li>
+           <li><a href="#">Military Veterans</a></li>
+           <li><a href="#">International Students</a></li>
+           <li><a href="#">Out of State</a></li>
+           <li><a href="#">Re-Admit</a></li>
+           <li><a href="#">Non-Degree</a></li>
+           <li><a href="#">Concurrently Enrolled</a></li>
+           <li><a href="#">Cost</a></li>
          </ul>
        </li>
        <li id="nav-academics">
@@ -140,15 +141,14 @@
            <li><a href="/business/">College of Business</a></li>
            <li><a href="/education/">School of Education</a></li>
            <li><a href="/fys/">First Year Success</a></li>
-           <li><a href="">Learning Enrichment</a></li>
-           <li><a href="">Academic Support</a></li>
-           <li><a href="">Extended Campus</a></li>
-           <li><a href="">Online Courses</a></li>
-           <li><a href="/commencement/">Graduation/ Commencement</a></li>
+           <li><a href="#">Academic Support</a></li>
+           <li><a href="#">Extended Campus</a></li>
+           <li><a href="#">Online Courses</a></li>
+           <li><a href="#">Graduation/ Commencement</a></li>
          </ul>
        </li>
        <li id="nav-campus">
-         <a class="mobile-header">Campus</a>
+         <a class="mobile-header">Campus Life</a>
          <ul class="pushdown-menu">
            <li><a href="/campuslife/">Campus Life</a></li>
            <li><a href="/studentactivities/">Student Activities</a></li>
@@ -160,7 +160,7 @@
          </ul>
        </li>
        <li id="nav-alumni">
-         <a class="mobile-header menu-last">Alumni &#38; Donors</a>
+         <a class="mobile-header menu-last">Alumni</a>
          <ul class="pushdown-menu">
            <li><a href="/alumni/">Alumni</a></li>
            <li><a href="">Donors</a></li>
@@ -222,10 +222,10 @@
 <div class="navbar-lower">
 <div class="container navbar-lower">
     <div class="col-xs-4"><a href="http://msudenver.edu/studenthub">
-        Student Hub</a>
+        Current Student</a>
     </div>
     <div class="col-xs-4"><a href="http://msudenver.edu/facstaff">
-        Faculty &#38; Staff</a>
+        Schedules / Calendar / Catalog</a>
     </div>
     <div class="col-xs-4"><a href="http://gometrostate.com/">
         Athletics</a>
