fixes mobile footer by removing mobile view and using col-sm

--- a/app/htmlcomponents/footer.html
+++ b/app/htmlcomponents/footer.html
@@ -1,24 +1,7 @@
 <div class="footer">
 <div class="container">
-        <div class="col-xs-12 col-md-6 col-lg-4 social campus-info mobile-msuinfo-show">
-              <p>
-                <a href="/"><strong>Metropolitan State University of Denver</strong></a><br><br>
-                <a href="/maps" id="Footer-Map"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a><br><br>
-                <a href="tel:303-556-5740" id="Footer-Phone"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a><br><br>
-                <a onclick="javascript:OpenLHNChat();return false;" href="#" id="Footer-Chat"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a><br><br>
-              </p>
-              <i class="social-non-mobile">
-               <a href="https://www.facebook.com/msudenver" target="_blank" id="Footer-Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
-               <a href="http://twitter.com/msudenver" target="_blank" id="Footer-Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
-               <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank" id="Footer-Linkedin"><i class="fa fa-linkedin-square fa-2x"></i></a>
-               <a href="https://instagram.com/msu_denver" target="_blank" id="Footer-Instagram"><i class="fa fa-instagram fa-2x"></i></a>
-               <a href="http://www.flickr.com/photos/msudenver/sets/" target="_blank" id="Footer-Flickr"><i class="fa fa-flickr fa-2x"></i></a>
-               <a href="http://www.youtube.com/user/msudenver" target="_blank" id="Footer-Youtube"><i class="fa fa-youtube-square fa-2x"></i></a><br>
-             </i>
-        </div>
-
         <div class="col-xs-12 col-md-12 col-lg-6 footer-menu">
-            <div class="col-xs-12 col-md-6 col-lg-6">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
               <p>
                 <a href="https://msudenver.edu/about" id="Footer-About">About</a><br>
                 <hr />
@@ -32,7 +15,7 @@
                 <hr class="hide-hr"/>
               </p>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-6">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
               <p>
                 <a href="https://msudenver.edu/admissions/takeatour/" id="Footer-Tours">Tours</a><br>
                 <hr/>
