adds main2016.scss to 2column layout and grunt file

--- a/development/terminalfour/src/html/2column.html
+++ b/development/terminalfour/src/html/2column.html
@@ -44,8 +44,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="styles/main2016.css" />
-<link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
+<link rel="stylesheet" href="style-assets/css/main2016.css">
 <!-- T4 CSS -->
 <t4 type="media" id="109887"/>
 <t4 type="media" id="61332"/>
