More setup - configuring Boostrap base styles

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -26,12 +26,12 @@
                 <h1>Cristian Solano-Cordova</h1>
                 <h2>MSU Denver ’17.</h2>
                 <p>White House Advisor. Dreamer. Roadrunner.</p>
-                <p><a href="javascript:void(0)" class="btn">Read his full story here.</a></p>
+                <p><a href="javascript:void(0)" class="btn btn-homepage">Read his full story here.</a></p>
             </section>
             <section id="homepage-news">
                 <h1 class="feature-heading">Transforming Lives. Impacting the World.</h1>
                 <p class="feature-subtext">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
-                <p><a href="javascript:void(0)" class="btn">read more roadrunner stories</a></p>
+                <p><a href="javascript:void(0)" class="btn btn-homepage">read more roadrunner stories</a></p>
             </section>
             <section id="homepage-at-a-glance"> 
                 <h1 class="feature-heading">MSHU Denver at a glance</h1>
@@ -39,11 +39,11 @@
             </section>
             <section id="homepage-quote">
                 <h1 class="feature-heading">LOCATED IN THE HEART OF THE CITY, MSU DENVER OFFERS AN URBAN EXPERIENCE THAT IS VIBRANT, DIVERSE, EXCITING AND UNIQUE.</h1> 
-                <p><a href="javascript:void(0)" class="btn">Read More</a></p>
+                <p><a href="javascript:void(0)" class="btn btn-homepage">Read More</a></p>
             </section>
             <section id="homepage-events">
                 <h1 class="feature-heading">What's happening right now at MSU Denver</h1>
-                 <p><a href="javascript:void(0)" class="btn">See all upcoming events</a></p>
+                 <p><a href="javascript:void(0)" class="btn btn-homepage">See all upcoming events</a></p>
             </section>
         </main>
         <footer>
