--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -13,27 +13,18 @@
 </head> 
     <body>  
         @@include('header.html') 
-        <main class="homepage-main">   
-            <section class="homepage-feature" id="homepage-feature-caption">
-               <div class="homepage-feature-caption-item">
-
-                    <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
-                    <div class="homepage-feature-caption-text">
-                        <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off.</h1>
-                        <a href="javascript:void(0)" class="homepage-feature-caption-link feature-subheading fa fa-angle-right">Read how we're powering careers and a 21st century economy</a>
-                    </div>
-               </div>
-            </section> 
+        <main class="homepage-main">  
+           @@include('homepage-feature-caption.html')   
             <section class="homepage-feature"> 
                 <h1 class="feature-heading">Cristian Solano-Cordova</h1>
                 <h2>MSU Denver ’17.</h2> 
                 <p>White House Advisor. Dreamer. Roadrunner.</p>
-                <p><a href="javascript:void(0)" class="btn btn-homepage">Read his full story here.</a></p>
+                <p><a href="javascript:void(0)" class="btn homepage-btn">Read his full story here.</a></p>
             </section>
             <section class="homepage-feature" id="homepage-news">
                 <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
                 <p class="feature-subtext">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
-                <p><a href="javascript:void(0)" class="btn btn-homepage">read more roadrunner stories</a></p>
+                <p><a href="javascript:void(0)" class="btn homepage-btn">read more roadrunner stories</a></p>
             </section>
             <section class="homepage-feature" id="homepage-at-a-glance"> 
                 <h1 class="feature-heading">MSHU Denver at a glance</h1>
@@ -41,11 +32,11 @@
             </section>
             <section class="homepage-feature" id="homepage-quote">
                 <h1 class="feature-heading">LOCATED IN THE HEART OF THE CITY, MSU DENVER OFFERS AN URBAN EXPERIENCE THAT IS VIBRANT, DIVERSE, EXCITING AND UNIQUE.</h1> 
-                <p><a href="javascript:void(0)" class="btn btn-homepage">Read More</a></p>
+                <p><a href="javascript:void(0)" class="btn homepage-btn">Read More</a></p>
             </section>
             <section class="homepage-feature" id="homepage-events">
                 <h1 class="feature-heading">What's happening right now at MSU Denver</h1>
-                 <p><a href="javascript:void(0)" class="btn btn-homepage">See all upcoming events</a></p>
+                 <p><a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a></p>
             </section>
         </main>
         @@include('footer.html') 
