--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -14,13 +14,8 @@
     <body>  
         @@include('header.html') 
         <main class="homepage-main">  
-           @@include('homepage-feature-caption.html')   
-            <section class="homepage-feature"> 
-                <h1 class="feature-heading">Cristian Solano-Cordova</h1>
-                <h2>MSU Denver ’17.</h2> 
-                <p>White House Advisor. Dreamer. Roadrunner.</p>
-                <p><a href="javascript:void(0)" class="btn homepage-btn">Read his full story here.</a></p>
-            </section>
+            @@include('homepage-feature-caption.html')   
+            @@include('homepage-ryor.html') 
             <section class="homepage-feature" id="homepage-news">
                 <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
                 <p class="feature-subtext">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
