--- a/www-root/index.html
+++ b/www-root/index.html
@@ -18,7 +18,7 @@
     <p class="feature-subtext"> -* header to be designed + developed by MSU Denver *-</p>
 </header> 
         <main class="homepage-main">  
-           <section class="homepage-feature" id="homepage-feature-caption">
+            <section class="homepage-feature" id="homepage-feature-caption">
     <div class="homepage-feature-caption-item">
         <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
         <div class="homepage-feature-caption-text">
@@ -27,12 +27,19 @@
         </div>
     </div>
 </section>    
-            <section class="homepage-feature"> 
-                <h1 class="feature-heading">Cristian Solano-Cordova</h1>
-                <h2>MSU Denver ’17.</h2> 
-                <p>White House Advisor. Dreamer. Roadrunner.</p>
-                <p><a href="javascript:void(0)" class="btn homepage-btn">Read his full story here.</a></p>
-            </section>
+            <section class="homepage-feature" id="homepage-ryor">
+   <img class="ryor-student-image img-responsive" src="style-assets/media/RYOR_solano.jpg" alt="Run Your Own Road - Cristian Solano-Cordova" />  
+    <div class="ryor-student">
+         
+        <h1 class="feature-heading">Cristian Solano-Cordova</h1>
+        <h2 class="feature-heading-sub">MSU Denver ’17.</h2> 
+        <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
+        <p><a href="javascript:void(0)" class="btn homepage-btn">Read his full story</a></p>   
+    </div>
+    <div class="ryor-image">
+        
+    </div>
+</section> 
             <section class="homepage-feature" id="homepage-news">
                 <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
                 <p class="feature-subtext">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
