Fixing SVG issue, font sizes

--- a/www-root/index.html
+++ b/www-root/index.html
@@ -28,16 +28,18 @@
     </div>
 </section>    
             <section class="homepage-feature" id="homepage-ryor">
-   <img class="ryor-student-image img-responsive" src="style-assets/media/RYOR_solano.jpg" alt="Run Your Own Road - Cristian Solano-Cordova" />  
+   <div class="ryor-student-image-wrap">
+       <img class="ryor-student-image img-responsive" src="style-assets/media/RYOR_solano.jpg" alt="Run Your Own Road - Cristian Solano-Cordova" />      
+   </div>
     <div class="ryor-student">
          
         <h1 class="feature-heading">Cristian Solano-Cordova</h1>
         <h2 class="feature-heading-sub">MSU Denver ’17.</h2> 
         <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
-        <p><a href="javascript:void(0)" class="btn homepage-btn">Read his full story</a></p>   
+        <a href="javascript:void(0)" class="btn homepage-btn">Read his full story</a>
     </div>
-    <div class="ryor-image">
-        
+    <div class="ryor-image">     
+        <img src="/style-assets/media/stack/svg/sprite.stack.svg#runyourownroad" alt="Denver City" />
     </div>
 </section> 
             <section class="homepage-feature" id="homepage-news">
