Michael working on the hompage

--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -15,12 +15,8 @@
         @@include('header.html') 
         <main class="homepage-main">  
             @@include('homepage-feature-caption.html')   
-            @@include('homepage-ryor.html') 
-            <section class="homepage-feature" id="homepage-news">
-                <h1 class="feature-heading-large">Transforming Lives. Impacting the World.</h1>
-                <p class="feature-subtext">For more than 50 years, MSU Denver has transformed lives. Our students, educators and alumni are making a difference in our community and across the globe.</p>
-                <p><a href="javascript:void(0)" class="btn homepage-btn">read more roadrunner stories</a></p>
-            </section>
+            @@include('homepage-ryor.html')  
+            @@include('homepage-news.html') 
             <section class="homepage-feature" id="homepage-at-a-glance"> 
                 <h1 class="feature-heading">MSHU Denver at a glance</h1>
                 <p class="feature-subtext">Diverse. Transformative. Game-changing.</p>
