--- a/app/homepage.html
+++ b/app/homepage.html
@@ -108,7 +108,6 @@
           <li><a href="#">Strategic Plan 2020</a></li>
           <li><a href="#">Office of the President</a></li>
           <li><a href="#">Board of Trustees</a></li>
-          <li><a href="#"></a></li>
           <li><a href="#">Our Past</a></li>
           <li><a href="#">Questions / Comments</a></li>
           <li><a href="#">Graduation / Commencement</a></li>
@@ -124,7 +123,7 @@
            <li><a href="#">Master&rsquo;s Programs</a></li>
            <li><a href="#">Military Veterans</a></li>
            <li><a href="#">International Students</a></li>
-           <li><a href="#">Out of State</a></li>
+           <li><a href="#">Out-of-State</a></li>
            <li><a href="#">Re-Admit</a></li>
            <li><a href="#">Non-Degree</a></li>
            <li><a href="#">Concurrently Enrolled</a></li>
@@ -141,9 +140,8 @@
            <li><a href="/education/">School of Education</a></li>
            <li><a href="/fys/">First Year Success</a></li>
            <li><a href="#">Academic Support</a></li>
-           <li><a href="#">Extended Campus</a></li>
-           <li><a href="#">Online Courses</a></li>
-           <li><a href="#">Graduation/ Commencement</a></li>
+           <li><a href="#">Online Courses/Extended Campus</a></li>
+           <li><a href="#">Special Programs</a></li>
          </ul>
        </li>
        <li id="nav-campus">
@@ -156,13 +154,13 @@
            <li><a href="/studentengagementandwellness/">Student Engagement &#38; Wellness</a></li>
            <li><a href="/campuslife/studentpublications/">Student Media</a></li>
            <li><a href="">Student Organizations</a></li>
+           <li><a href="">Student Resources</a></li>
          </ul>
        </li>
        <li id="nav-alumni">
          <a class="mobile-header menu-last">Alumni</a>
          <ul class="pushdown-menu">
            <li><a href="/alumni/">Alumni</a></li>
-           <li><a href="">Donors</a></li>
            <li><a href="/alumni/careerservices/">Career Services</a></li>
            <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
            <li><a href="">MSU Denver Magazine</a></li>
