--- a/development/terminalfour/src/html/index.html
+++ b/development/terminalfour/src/html/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="initial-scale=1">
 	<title>MSU Denver - Homepage</title>
     <link href="//fonts.googleapis.com/css?family=Karla:400,700|Open+Sans:400,400i,700|Raleway:400,700,900" rel="stylesheet">
-	<link rel="stylesheet" href="style-assets/css/style.css">
+    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+	<link rel="stylesheet" href="style-assets/css/style.css" /> 
 	
 	<script src="style-assets/lib/jquery/jquery.min.js"></script> 
 </head> 
@@ -15,7 +16,7 @@
             @@include('homepage-feature-caption.html')   
             @@include('homepage-ryor.html')  
             @@include('homepage-news.html') 
-            @@include('homepage-at-a-glance.html') 
+            @@include('homepage-at-a-glance.html')  
             @@include('homepage-community.html') 
             @@include('homepage-events.html') 
             
